[IMPR] nodejs install working

--- a/templates/systemd_springboot.service.j2
+++ b/templates/systemd_springboot.service.j2
@@ -2,12 +2,18 @@
 Description={{ steamengine_project_name }} server
 
 [Service]
-ExecStart=/usr/bin/java -jar /{{ steamengine_project_name }}/project_root/project.jar --spring.config.location={% if steamengine_project_configuration_base_name is defined %}classpath:/{{ steamengine_project_configuration_base_name }},{% endif %}file:/{{ steamengine_project_name }}/conf/project_env_conf.yml
+ExecStart=/usr/bin/java -jar {{ steamengine_project_root_path }}/project.jar --spring.config.location={% if steamengine_project_configuration_base_name is defined %}classpath:/{{ steamengine_project_configuration_base_name }},{% endif %}file:{{ steamengine_conf_path }}/project_env_conf.yml
 Type=simple
+
 Restart=always
 RestartSec=10
-User={{ steamengine_project_name }}
-Group={{ steamengine_project_name }}
+
+LimitNOFILE=infinity
+LimitNPROC=infinity
+LimitCORE=infinity
+
+User={{ steamengine_app_user }}
+Group={{ steamengine_app_user }}
 SyslogIdentifier={{ steamengine_project_name }}
 
 [Install]
