--- a/templates/rsyslog.conf.j2
+++ b/templates/rsyslog.conf.j2
@@ -1,3 +1,3 @@
 if $programname == '{{ steamengine_project_name }}' then {
-    action(type="omfile" fileCreateMode="0644" file="/{{ steamengine_project_name }}/logs/application.log")
+    action(type="omfile" fileCreateMode="0644" file="{{ steamengine_logs_path }}/application.log")
 }
