--- a/templates/systemd_tomcat7.service.j2
+++ b/templates/systemd_tomcat7.service.j2
@@ -5,7 +5,10 @@ Description={{ steamengine_project_name }} server
 ExecStart={{ steamengine_project_root_path }}/tomcat/bin/catalina.sh run
 Type=simple
 
-# Environment=JAVA_OPTS=-Djava.util.logging.config.file=/dev/null
+Environment=CATALINA_OPTS="
+{%- for opt in steamengine_java_base_opts | union(steamengine_java_opts | default ([])) -%}
+    {{ opt + ' ' }}
+{%- endfor %}"
 Environment=CATALINA_HOME={{ steamengine_project_root_path }}/tomcat
 Environment=CATALINA_BASE={{ steamengine_project_root_path }}/tomcat
 
@@ -22,3 +25,7 @@ SyslogIdentifier={{ steamengine_project_name }}
 
 [Install]
 WantedBy=multi-user.target
+
+
+
+
