[IMPR] keep only app log message in application.log

--- a/templates/rsyslog.conf.j2
+++ b/templates/rsyslog.conf.j2
@@ -1,5 +1,7 @@
 # {{ ansible_managed }}
 
+template(name="tplMsgOnly" type="string" string="%msg%\n")
+
 if $programname == '{{ steamengine_project_name }}' then {
-    action(type="omfile" fileCreateMode="0644" file="{{ steamengine_logs_path }}/application.log")
+    action(type="omfile" fileCreateMode="0644" file="{{ steamengine_logs_path }}/application.log" template="tplMsgOnly")
 }
