[FIX] MR reviews added

--- a/templates/systemd_springboot.service.j2
+++ b/templates/systemd_springboot.service.j2
@@ -7,7 +7,7 @@ Description={{ steamengine_project_name }} server
 ExecStart=/usr/bin/java \
     -jar {{ steamengine_project_root_path }}/project.jar \
     --spring.config.location={% if steamengine_project_configuration_base_name is defined %}classpath:/{{ steamengine_project_configuration_base_name }},{% endif %}file:{{ steamengine_conf_path }}/project_env_conf.yml \
-    {% for opt in steamengine_java_base_opts | union(steamengine_java_opts | default ([])) %}{{ opt + ' ' }}{% endfor %}
+    {% for opt in steamengine_play_base_opts | union(steamengine_play_opts | default ([])) %}{{ opt + ' ' }}{% endfor %}
 
 Type=simple
 
