[IMPR] add option to disable VersionLoggerListener

--- a/templates/tomcat7.server.xml.j2
+++ b/templates/tomcat7.server.xml.j2
@@ -3,7 +3,11 @@
 <!-- {{ ansible_managed }} -->
 
 <Server port="-1" shutdown="SHUTDOWN">
+
+    {% if steamengine_tomcat7_version_logger_listener_on %}
     <Listener className="org.apache.catalina.startup.VersionLoggerListener" />
+    {% endif %}
+
     <Listener className="org.apache.catalina.core.AprLifecycleListener" SSLEngine="on" />
     <Listener className="org.apache.catalina.core.JasperListener" />
     <Listener className="org.apache.catalina.core.JreMemoryLeakPreventionListener" />
