--- a/templates/systemd_nodejs_pm2.service.j2
+++ b/templates/systemd_nodejs_pm2.service.j2
@@ -4,20 +4,19 @@
 Description={{ steamengine_project_name }} server
 
 [Service]
-Type=forking
+ExecStart=/usr/local/lib/npm/bin/pm2 start {{ steamengine_project_root_path_web }}/{{ steamengine_nodejs_entrypoint }} --name {{ steamengine_project_name }} -i max -e /dev/null -o /dev/null --no-daemon
+Type=simple
 PIDFile={{ steamengine_project_root_path }}/pm2/pm2.pid
-
-ExecStart=/usr/local/lib/npm/bin/pm2 start {{ steamengine_project_root_path_web }}/{{ steamengine_nodejs_entrypoint }} --name {{ steamengine_project_name }} -l {{ steamengine_logs_path }}/node-app.log -e /dev/null -o /dev/null -i max
-ExecReload=/usr/local/lib/npm/bin/pm2 reload all
-ExecStop=/usr/local/lib/npm/bin/pm2 kill
 
 Environment=NODE_ENV=production
 Environment=HOME={{ steamengine_project_root_path }}
 Environment=PM2_HOME={{ steamengine_project_root_path }}/pm2
 
+{% if steamengine_project_configuration is defined %}
 {% for key, value in steamengine_project_configuration.items() %}
 Environment={{key}}={{value}}
 {% endfor %}
+{% endif %}
 
 Restart=always
 RestartSec=10
