[IMPR] use a config file for nodejs deployment, allowing config change without root privileges

--- a/templates/systemd_nodejs_pm2.service.j2
+++ b/templates/systemd_nodejs_pm2.service.j2
@@ -5,18 +5,12 @@ Description={{ steamengine_project_name }} server
 
 [Service]
 WorkingDirectory={{ steamengine_project_root_path_web }}
-ExecStart=/usr/local/lib/npm/bin/pm2 start {{ steamengine_nodejs_entrypoint }} --name {{ steamengine_project_name }} -i max -e /dev/null -o /dev/null --no-daemon
+ExecStart=/usr/local/lib/npm/bin/pm2 start {{ steamengine_conf_path }}/nodejs_pm2_ecosystem.json --no-daemon
 Type=simple
 PIDFile={{ steamengine_project_root_path }}/pm2/pm2.pid
 
 Environment=NODE_ENV=production
 Environment=PM2_HOME={{ steamengine_project_root_path }}/pm2
-
-{% if steamengine_project_configuration is defined %}
-{% for key, value in steamengine_project_configuration.items() %}
-Environment={{key}}={{value}}
-{% endfor %}
-{% endif %}
 
 Restart=always
 RestartSec=10
