[FIX] use cluster_mode instead of cluster for default exec_mode pm2

--- a/templates/nodejs_pm2_ecosystem.json.j2
+++ b/templates/nodejs_pm2_ecosystem.json.j2
@@ -15,6 +15,6 @@
     {% endif %}
     {% if steamengine_nodejs_cluster_mode is defined and steamengine_nodejs_cluster_mode %}
     instances: "max",
-    exec_mode: "cluster",
+    exec_mode: "cluster_mode",
     {% endif %}
 }
