[FIX] log path nodejs

--- a/templates/steamengine_nodejs.sh.j2
+++ b/templates/steamengine_nodejs.sh.j2
@@ -65,7 +65,7 @@ while [ $# -gt 0 ]; do
      exit $?
     ;;
     log)
-     tail -f {{ steamengine_project_root_path }}/pm2/pm2.log {{ steamengine_logs_path }}/application.log {{ steamengine_logs_path }}/node-app.log
+     tail -f {{ steamengine_logs_path }}/application.log
      exit $?
     ;;
     *)
