[UPDATE] Rsyslog config
Removes this first character if it is a space.

--- a/templates/rsyslog.conf.j2
+++ b/templates/rsyslog.conf.j2
@@ -4,7 +4,9 @@
 $EscapeControlCharactersOnReceive off
 {% endif %}
 
-template(name="tplMsgOnly" type="string" string="%msg%\n")
+{# Remove rsyslog leading space with %msg:2:$:% #}
+{# https://runnable.com/blog/the-mysterious-case-of-the-leading-space #}
+template(name="tplMsgOnly" type="string" string="%msg:2:$:%\n")
 
 if $programname == '{{ steamengine_project_name }}' then {
     action(type="omfile" fileCreateMode="0644" file="{{ steamengine_logs_path }}/application.log" template="tplMsgOnly")
