--- a/templates/systemd_tomcat7.service.j2
+++ b/templates/systemd_tomcat7.service.j2
@@ -7,10 +7,10 @@ Description={{ steamengine_project_name }} server
 ExecStart={{ steamengine_project_root_path }}/tomcat/bin/catalina.sh run
 Type=simple
 
-Environment=CATALINA_OPTS="-D{{ steamengine_tomcat7_configuration_key }}={{ steamengine_conf_path }}/project_env.conf
+Environment='CATALINA_OPTS=-D{{ steamengine_tomcat7_configuration_key }}={{ steamengine_conf_path }}/project_env.conf
 {%- for opt in steamengine_java_base_opts | union(steamengine_java_opts | default ([])) -%}
     {{ ' ' + opt }}
-{%- endfor %}"
+{%- endfor %}'
 Environment=CATALINA_HOME={{ steamengine_project_root_path }}/tomcat
 Environment=CATALINA_BASE={{ steamengine_project_root_path }}/tomcat
 
