--- a/templates/nodejs_pm2_ecosystem.json.j2
+++ b/templates/nodejs_pm2_ecosystem.json.j2
@@ -17,4 +17,7 @@
     instances: "max",
     exec_mode: "cluster_mode",
     {% endif %}
+    {% if steamengine_nodejs_node_args is defined and steamengine_nodejs_node_args %}
+    interpreter_args: "{{ steamengine_nodejs_node_args }}",
+    {% endif %}
 }
