--- a/templates/steamengine_tomcat7.sh.j2
+++ b/templates/steamengine_tomcat7.sh.j2
@@ -58,12 +58,20 @@ while [ $# -gt 0 ]; do
      exit $?
     ;;
     fixpermissions)
-     chown -R {{ steamengine_project_user }}:{{ steamengine_app_user }} {{ steamengine_project_root_path }}/tomcat/webapps/ROOT
-     chmod -R u=rwx,g=rx,o= {{ steamengine_project_root_path }}/tomcat/webapps/ROOT
+     if [ -d "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT" ]; then
+         chown -R {{ steamengine_project_user }}:{{ steamengine_app_user }} {{ steamengine_project_root_path }}/tomcat/webapps/ROOT
 
-     {% if steamengine_tomcat7_allow_insecure_write_web_inf %}chmod -R u=rwx,g=rwx,o= {{ steamengine_project_root_path }}/tomcat/webapps/ROOT/WEB-INF{% endif %}
-
-     {% if steamengine_tomcat7_allow_insecure_write_root %}chmod -R u=rwx,g=rwx,o= {{ steamengine_project_root_path }}/tomcat/webapps/ROOT{% endif %}
+         {% if steamengine_tomcat7_allow_insecure_write_root %}
+            chmod -R u=rwx,g=rwx,o= {{ steamengine_project_root_path }}/tomcat/webapps/ROOT
+         {% else %}
+             chmod -R u=rwx,g=rx,o= {{ steamengine_project_root_path }}/tomcat/webapps/ROOT
+             {% if steamengine_tomcat7_allow_insecure_write_web_inf %}
+                 if [ -d "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT/WEB-INF" ]; then
+                    chmod -R u=rwx,g=rwx,o= {{ steamengine_project_root_path }}/tomcat/webapps/ROOT/WEB-INF
+                 fi
+             {% endif %}
+         {% endif %}
+     fi
 
      exit $?
     ;;
