--- a/templates/steamengine_symfony4.sh.j2
+++ b/templates/steamengine_symfony4.sh.j2
@@ -66,12 +66,12 @@ while [ $# -gt 0 ]; do
        -exec chown {{ steamengine_project_user }}:{{ steamengine_project_user }}app {} \; \
        -exec chmod 'u=rwx,g=rx,o=' {} \;
  
-     /usr/bin/setfacl -R -m u:www-data:rwX -m u:{{ steamengine_project_user }}:rwX \
+     /usr/bin/setfacl -R -m u:{{ (ansible_os_family == 'RedHat') | ternary('nginx', 'www-data') }}:rwX -m u:{{ steamengine_project_user }}:rwX \
      {% for value in steamengine_sf4_path_with_write_permission %}
        {{ steamengine_project_root_path_web }}/{{ value }} \
      {% endfor %}
  
-     /usr/bin/setfacl -dR -m u:www-data:rwX -m u:{{ steamengine_project_user }}:rwX \
+     /usr/bin/setfacl -dR -m u:{{ (ansible_os_family == 'RedHat') | ternary('nginx', 'www-data') }}:rwX -m u:{{ steamengine_project_user }}:rwX \
      {% for value in steamengine_sf4_path_with_write_permission %}
        {{ steamengine_project_root_path_web }}/{{ value }} \
      {% endfor %}
