--- a/templates/project_properties.env.j2
+++ b/templates/project_properties.env.j2
@@ -1,5 +1,5 @@
 # {{ ansible_managed }}
 
-{%- for key, value in steamengine_project_configuration.items() -%}
+{% for key, value in steamengine_project_configuration.items() -%}
     {{ key }}={{ value + '\n'}}
 {%- endfor -%}
