--- a/templates/steamengine_symfony4.sh.j2
+++ b/templates/steamengine_symfony4.sh.j2
@@ -63,6 +63,9 @@ while [ $# -gt 0 ]; do
      {% for value in steamengine_sf4_path_with_write_permission %}
        -not -path '{{steamengine_project_root_path_web}}/{{ value }}*' \
      {% endfor %}
+     {% for value in steamengine_sf4_persistent_directory %}
+       -not -path '{{steamengine_project_root_path_web}}/{{ value }}*' \
+     {% endfor %}
        -not -path '{{ steamengine_project_root_path_web }}/.env.local' \
        -exec chown {{ steamengine_project_user }}:{{ steamengine_project_user }}app {} \; \
        -exec chmod 'u=rwx,g=rx,o=' {} \;
@@ -71,9 +74,15 @@ while [ $# -gt 0 ]; do
      {% for value in steamengine_sf4_path_with_write_permission %}
        {{ steamengine_project_root_path_web }}/{{ value }} \
      {% endfor %}
+     {% for value in steamengine_sf4_persistent_directory %}
+       {{ steamengine_project_root_path_web }}/{{ value }} \
+     {% endfor %}
  
      /usr/bin/setfacl -dR -m u:{{ (ansible_os_family == 'RedHat') | ternary('apache', 'www-data') }}:rwX -m u:{{ steamengine_project_user }}:rwX \
      {% for value in steamengine_sf4_path_with_write_permission %}
+       {{ steamengine_project_root_path_web }}/{{ value }} \
+     {% endfor %}
+     {% for value in steamengine_sf4_persistent_directory %}
        {{ steamengine_project_root_path_web }}/{{ value }} \
      {% endfor %}
  
