Add extra field to journald logging

--- a/templates/systemd_tomcat7.service.j2
+++ b/templates/systemd_tomcat7.service.j2
@@ -23,6 +23,8 @@ LimitCORE=infinity
 
 User={{ steamengine_app_user }}
 Group={{ steamengine_app_user }}
+LogExtraFields=STM_ID=steamengine
+LogExtraFields=PROJECT_TYPE={{ steamengine_project_type }}
 SyslogIdentifier={{ steamengine_project_name }}
 
 [Install]
