[FIX] string concatenation operator in templates

--- a/templates/project_properties.conf.j2
+++ b/templates/project_properties.conf.j2
@@ -6,11 +6,11 @@ include "{{ steamengine_project_configuration_base_name }}"
 
 {%- macro display_keys(key, value) -%}
     {%- if value is string -%}
-        {{ key }}={{ value + '\n'}}
+        {{ key }}={{ value ~ '\n'}}
     {%- else -%}
         {%- if value is mapping -%}
             {%- for d_key, d_value in value.items() -%}
-                {{ display_keys(key + '.' + d_key, d_value) }}
+                {{ display_keys(key ~ '.' ~ d_key, d_value) }}
             {%- endfor -%}
         {%- endif -%}
     {%- endif -%}
