--- a/templates/systemd_nodejs_pm2.service.j2
+++ b/templates/systemd_nodejs_pm2.service.j2
@@ -5,7 +5,7 @@ Description={{ steamengine_project_name }} server
 
 [Service]
 WorkingDirectory={{ steamengine_project_root_path_web }}
-ExecStart=/usr/local/lib/npm/bin/pm2 start {{ steamengine_conf_path }}/nodejs_pm2_ecosystem.json --no-daemon
+ExecStart=/usr/local/lib/npm/bin/pm2 start {{ steamengine_conf_path }}/nodejs_pm2_ecosystem.config.js --no-daemon
 Type=simple
 PIDFile={{ steamengine_project_root_path }}/pm2/pm2.pid
 
