--- a/templates/nodejs_pm2_ecosystem.config.js.j2
+++ b/templates/nodejs_pm2_ecosystem.config.js.j2
@@ -11,7 +11,7 @@ module.exports = {
             {% if steamengine_project_configuration is defined %}
             env: {
               {% for key, value in steamengine_project_configuration.items() %}
-              {{key}}: "{{value}}",
+              {{ key }}: "{{ value }}",
               {% endfor %}
             },
             {% endif %}
@@ -27,9 +27,9 @@ module.exports = {
         ,
         {% for cron in steamengine_nodejs_crons %}
         {
-            name: "{{cron.name}}",
-            script: "{{cron.entrypoint}}",
-            cron_restart: "{{cron.expression}}",
+            name: "{{ cron.name|default(cron.entrypoint, true) }}",
+            script: "{{ cron.entrypoint }}",
+            cron_restart: "{{ cron.expression }}",
             watch: false,
             autorestart: false
         },
