--- a/templates/steamengine_nodejs.sh.j2
+++ b/templates/steamengine_nodejs.sh.j2
@@ -12,6 +12,7 @@ display_usage() {
     echo -e "  status\n\t\t\tDisplay the SteamEngine project status"
     echo -e "  monit\n\t\t\tMonitor the SteamEngine project logs"
     echo -e "  log\n\t\t\tDisplay and follow the SteamEngine project logs"
+    echo -e "  fixpermissions\n\t\t\tRestore project files and folders permissions"
     echo -e "  -h, --help\n\t\t\tShow Usages"
     echo ""
 }
@@ -66,6 +67,20 @@ while [ $# -gt 0 ]; do
     ;;
     log)
      tail -f {{ steamengine_logs_path }}/application.log
+     exit $?
+    ;;
+    fixpermissions)
+     if [ -d "{{ steamengine_project_root_path_web }}" ]; then
+         chown -R {{ steamengine_project_user }}:{{ steamengine_app_user }} {{ steamengine_project_root_path_web }}
+         chmod -R u=rwx,g=rx,o= {{ steamengine_project_root_path_web }}
+         {% for item in steamengine_nodejs_allowed_write_paths -%}
+         if [ -d "{{ steamengine_project_root_path_web }}/{{ item }}" ]; then
+             chown -R {{ steamengine_project_user }}:{{ steamengine_app_user }} {{ steamengine_project_root_path_web }}/{{ item }}
+             chmod -R u=rwx,g=rwx,o= {{ steamengine_project_root_path_web }}/{{ item }}
+         fi
+         {% endfor %}
+
+     fi
      exit $?
     ;;
     *)
