--- a/templates/steamengine_wrapper.sh.j2
+++ b/templates/steamengine_wrapper.sh.j2
@@ -35,7 +35,7 @@ while [ $# -gt 0 ]; do
   arg=$1
   shift
   case $arg in
-  {% for item in steamengine_wrapper_scripts | union(steamengine_wrapper_scripts_extra) -%}
+  {% for item in steamengine_wrapper_scripts -%}
   {{ item.name }})
     {{ item.command | indent(4) }}
     exit $?
